# hokudai-hitachi

./: .gitignore  Cargo.toml  idea.md
.github/workflows/: run.yaml
src/: a.rs  b.rs  main.rs
toolkit/: LICENSE.txt  build.sh  calc.py  debug_edges.txt  debug_nodes.txt  gen.py  judge.sh  run.py
toolkit/configs/: config_1000_5_10_1000.toml  config_1000_5_10_250.toml  config_1000_5_10_500.toml  config_1000_5_1_1000.toml  config_1000_5_1_250.toml  config_1000_5_1_500.toml  config_1000_5_2_1000.toml  config_1000_5_2_250.toml  config_1000_5_2_500.toml  config_1000_5_5_1000.toml  config_1000_5_5_250.toml  config_1000_5_5_500.toml  config_1000_6_10_1000.toml  config_1000_6_10_250.toml  config_1000_6_10_500.toml  config_1000_6_1_1000.toml  config_1000_6_1_250.toml  config_1000_6_1_500.toml  config_1000_6_2_1000.toml  config_1000_6_2_250.toml  config_1000_6_2_500.toml  config_1000_6_5_1000.toml  config_1000_6_5_250.toml  config_1000_6_5_500.toml  config_1000_7_10_1000.toml  config_1000_7_10_250.toml  config_1000_7_10_500.toml  config_1000_7_1_1000.toml  config_1000_7_1_250.toml  config_1000_7_1_500.toml  config_1000_7_2_1000.toml  config_1000_7_2_250.toml  config_1000_7_2_500.toml  config_1000_7_5_1000.toml  config_1000_7_5_250.toml  config_1000_7_5_500.toml  config_300_5_10_1000.toml  config_300_5_10_250.toml  config_300_5_10_500.toml  config_300_5_1_1000.toml  (+68 more)
toolkit/generator/: calc_dist  config.toml  debug_edges.txt  debug_map.txt  debug_nodes.txt  debug_terrain.txt  map_generator  testcase.txt  trans_prob_mat_generator
toolkit/in/: in0000.txt  in0001.txt  in0002.txt  (+105 more)
(+6 files in other folders)
